# dbs-onboard-map-api

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CatalogClient_8h_source.html  Catalog_8h_source.html  ClientSettings_8h_source.html  CommonTypes_8h_source.html  ConsolidatedLayers_8h_source.html  HttpRuntimeError_8h_source.html  Landmarks_8h_source.html  LayerClient_8h_source.html  Layer_8h_source.html  MapFileSystem_8h_source.html  MapServiceConfig_8h_source.html  MapService_8h_source.html  Partition_8h_source.html  README.md  RcaTopology_8h_source.html  SimplifiedLandmarks_8h_source.html  TrackEdge_8h_source.html  TrackNode_8h_source.html  Zone_8h_source.html  annotated.html  azure-pipelines.yml  build.sh  classdbs__map_1_1MapService-members.html  classdbs__map_1_1MapService.html  classdbs__map_1_1download_1_1CatalogClient-members.html  classdbs__map_1_1download_1_1CatalogClient.html  classdbs__map_1_1download_1_1HttpRuntimeError-members.html  classdbs__map_1_1download_1_1HttpRuntimeError.html  classdbs__map_1_1download_1_1HttpRuntimeError__inherit__graph.dot  classdbs__map_1_1download_1_1LayerClient-members.html  classdbs__map_1_1download_1_1LayerClient.html  classdbs__map_1_1model_1_1Zone-members.html  classdbs__map_1_1model_1_1Zone.html  classdbs__map_1_1utils_1_1MapFileSystem-members.html  (+124 more)
dbs-map-api/: CMakeLists.txt
dbs-map-api/cmake/: CompileProtobufSchema.cmake
dbs-map-api/cmake/configs/: dbs-map-apiConfig.cmake
dbs-map-api/hdmap/validate.s4r2.oss.4/12/: metadata.json
dbs-map-api/hdmap/validate.s4r2.oss.4/12/landmarks/partitions/: 23608582  23608592  23608592_metadata.json
dbs-map-api/hdmap/validate.s4r2.oss.4/12/rca-centerline/partitions/: 23608579  23608579_metadata.json  23608580
dbs-map-api/hdmap/validate.s4r2.oss.4/12/rca-topology/: blobs.json
dbs-map-api/hdmap/validate.s4r2.oss.4/12/rca-topology-geometry/partitions/: 23608579  23608581  23608581_metadata.json  23608582_metadata.json  23608592
dbs-map-api/hdmap/validate.s4r2.oss.4/12/rca-topology/partitions/: 23608579_metadata.json  23608581  23608582_metadata.json  23608592_metadata.json
dbs-map-api/hdmap/validate.s4r2.oss.4/12/risk-assessment-zones/: metadata.json
dbs-map-api/hdmap/validate.s4r2.oss.4/12/risk-assessment-zones/partitions/: 23608580  23608582_metadata.json
dbs-map-api/hdmap/validate.s4r2.oss.4/12/track2tiles/partitions/: trackIds2Tiles
dbs-map-api/hdmap/validate.s4r2.oss.4/63/landmarks/partitions/: 23608580  23608581  23608582  23608592
dbs-map-api/hdmap/validate.s4r2.oss.4/63/rca-topology/partitions/: 23608582
dbs-map-api/hdmap/validate.s4r2.oss.4/63/risk-assessment-zones/partitions/: 23608580  23608581  23608582  23608592
dbs-map-api/include/dbs-map-api/: CommonTypes.h  MapService.h  MapServiceConfig.h
dbs-map-api/include/dbs-map-api/download/: CatalogClient.h  ClientSettings.h  HttpRuntimeError.h  LayerClient.h
dbs-map-api/include/dbs-map-api/download/model/: Catalog.h  Layer.h  Partition.h
dbs-map-api/include/dbs-map-api/model/: ConsolidatedLayers.h  Landmarks.h  RcaTopology.h  SimplifiedLandmarks.h  TrackEdge.h  TrackNode.h  Zone.h
dbs-map-api/include/dbs-map-api/utils/: MapFileSystem.h
dbs-map-api/proto/db-sensors4rail-phase2/f-map-landmarks_proto-0.0.4/: CMakeLists.txt
dbs-map-api/src/: MapService.cpp  MapServiceConfig.cpp  MapServiceImpl.cpp  MapServiceImpl.h
dbs-map-api/src/decoder/: BaseDecoder.h  LandmarkDecoder.cpp  LandmarkDecoder.h  LayerDecoder.cpp  LayerDecoder.h  RcaTopologyDecoder.cpp  RcaTopologyDecoder.h  ZoneDecoder.cpp  ZoneDecoder.h
dbs-map-api/src/download/: CatalogClient.cpp  CatalogClientImpl.cpp  CatalogClientImpl.h  ClientSettings.cpp  HttpClient.cpp  HttpClient.h  HttpRuntimeError.cpp  LayerClient.cpp  LayerClientImpl.cpp  LayerClientImpl.h  MapUpdater.cpp  MapUpdater.h
dbs-map-api/src/utils/: Geo.cpp  Geo.h  Hash.cpp  Hash.h  MapFileSystem.cpp  ProtobufCleaner.cpp  ProtobufCleaner.h
dbs-map-api/tests/: CMakeLists.txt  MapServiceTest.cpp
dbs-map-api/tests/download/: CatalogClientTests.cpp  LayerClientTests.cpp  MapUpdateTest.cpp
map-service/: CMakeLists.txt
map-service/cmake/: CompileProtobufSchema.cmake
map-service/cmake/configs/: map-serviceConfig.cmake
map-service/hdmap/validate.s4r2.oss.4/12/landmarks/partitions/: 23608580
map-service/hdmap/validate.s4r2.oss.4/12/risk-assessment-zones/partitions/: 23608581  23608582
map-service/hdmap/validate.s4r2.oss.4/2/landmarks/partitions/: 23608580  (+3 more)
map-service/include/map-service/: CommonTypes.h  MapService.h  MapServiceConfig.h
map-service/include/map-service/download/: CatalogClient.h  ClientSettings.h  HttpRuntimeError.h  LayerClient.h  Response.h  Types.h
map-service/include/map-service/download/model/: Catalog.h  Layer.h  Partition.h
map-service/include/map-service/model/: ConsolidatedLayers.h  Landmarks.h  RcaTopology.h  SimplifiedLandmarks.h  TrackEdge.h  TrackNode.h  Zone.h
map-service/include/map-service/utils/: MapFileSystem.h
map-service/proto/xebia-sensors4rail-phase2/f-map-landmarks_proto-0.0.4/: CMakeLists.txt
map-service/src/: MapService.cpp  MapServiceConfig.cpp  MapServiceImpl.cpp  MapServiceImpl.h  MapUpdater.cpp  MapUpdater.h
map-service/src/decoder/: BaseDecoder.h  LandmarkDecoder.cpp  LandmarkDecoder.h  LayerDecoder.cpp  LayerDecoder.h  RcaTopologyDecoder.cpp  RcaTopologyDecoder.h  ZoneDecoder.cpp  ZoneDecoder.h
map-service/src/download/: CatalogClient.cpp  CatalogClientImpl.cpp  CatalogClientImpl.h  ClientSettings.cpp  HttpClient.cpp  HttpClient.h  HttpRuntimeError.cpp  LayerClient.cpp  LayerClientImpl.cpp  LayerClientImpl.h  MapUpdater.cpp  MapUpdater.h
map-service/src/utils/: Geo.cpp  Geo.h  Hash.cpp  Hash.h  HttpClient.cpp  HttpClient.h  MapFileSystem.cpp  ProtobufCleaner.cpp  ProtobufCleaner.h  Serialization.h
map-service/tests/: CMakeLists.txt  GoogleTestRunner.cpp  MapServiceTest.cpp
map-service/tests/download/: CatalogClientTests.cpp  CatalogClientTests.cpp_disabled  LayerClientTests.cpp  LayerClientTests.cpp_disabled  MapUpdateTest.cpp  MapUpdateTest.cpp_disabled
(+148 files in other folders)
